Refactor day 07